added seach bar to ui

--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,104 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style data-merge-styles="true"></style>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Sanjampreet Singh · Full Stack Software Developer</title>
+    <meta name="description" content="I am a Full Stack Software Developer" />
+
+    <meta name="author" content="Sanjampreet Singh" />
+    <meta
+      name="keywords"
+      content="gndec, gne, t&amp;p,cell,training and placement, sanjam, Accenture, infosys, sanjam, ludhiana Sanjampreet, sanjampreet singh, Full Stack, SDE, SE, ReactJS, Django, React, JavaScript, Redux, BCG X "
+    />
+    <meta name="theme-color" content="#29b9ee" />
+
+    <meta itemscope="" itemtype="http://schema.org/Article" />
+    <meta
+      itemprop="headline"
+      content="Sanjampreet Singh · Full Stack Software Developer"
+    />
+    <meta
+      itemprop="description"
+      content="I am a Full Stack Software Developer"
+    />
+    <meta itemprop="image" content="https://sanjam.dev/assets/512x512.png" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Sanjampreet Singh" />
+    <meta property="og:url" content="https://sanjam.dev" />
+    <meta property="og:site_name" content="Sanjam" />
+    <meta
+      property="og:description"
+      content="I am a Full Stack Software Developer"
+    />
+    <meta property="og:image" content="https://sanjam.dev/assets/512x512.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="https://sanjam.dev" />
+    <meta name="twitter:site" content="Sanjam" />
+    <meta name="twitter:title" content="Sanjampreet Singh" />
+    <meta
+      name="twitter:description"
+      content="I am a Full Stack Software Developer"
+    />
+    <meta
+      name="twitter:image:src"
+      content="https://sanjam.dev/assets/300x300.png"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=BenchNine:700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,400i,700,900i"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./assets/styles.min.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <link
+      type="text/plain"
+      rel="author"
+      href="https://sanjam.dev/assets/humans.txt"
+    />
+    <link rel="manifest" href="https://sanjam.dev/site.webmanifest" />
+
+    <meta name="robots" content="INDEX,FOLLOW" />
+    <link rel="apple-touch-icon" href="./assets/192x192.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+    <meta name="apple-mobile-web-app-title" content="Sanjam" />
+
+    <noscript>Your browser does not support JavaScript!</noscript>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesnt work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <link
+      rel="icon"
+      href="https://sanjam.dev/assets/512x512.png"
+      sizes="512x512"
+    />
+    <link
+      rel="icon"
+      href="https://sanjam.dev/assets/192x192.png"
+      sizes="192x192"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="x5-page-mode" content="app" />
+    <meta name="browsermode" content="application" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
