--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <meta name="author" content="Sanjampreet Singh" />
     <meta
       name="keywords"
-      content="gndec, gne, t&amp;p,cell,training and placement, sanjam, Accenture, infosys, sanjam, ludhiana Sanjampreet, sanjampreet singh, Full Stack, SDE, SE, ReactJS, Django, React, JavaScript, Redux, BCG X "
+      content="gndec, gne, t&amp;p,cell,training and placement, sanjam, Accenture, infosys, sanjam, ludhiana Sanjampreet, sanjampreet singh, Full Stack, SDE, SE, ReactJS, Django, React, JavaScript, Redux, BCG X, Boston Consulting Group, India, Punjab, Gurugram "
     />
-    <meta name="theme-color" content="#29b9ee" />
+    <meta name="theme-color" content="#ffffff" />
 
     <meta itemscope="" itemtype="http://schema.org/Article" />
     <meta
