--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Sanjampreet Singh" />
     <meta
       name="keywords"
-      content="gndec, gne, t&amp;p,cell,training and placement, sanjam, Accenture, infosys, sanjam, ludhiana Sanjampreet, sanjampreet singh, Full Stack, SDE, SE, ReactJS, Django, React, JavaScript, Redux, BCG X, Boston Consulting Group, India, Punjab, Gurugram "
+      content="gndec, gne, t&amp;p,cell,training and placement, sanjam, Accenture, infosys, sanjam, ludhiana Sanjampreet, sanjampreet singh, Full Stack, SDE, SE, ReactJS, Django, React, JavaScript, Redux, BCG X, Boston Consulting Group, India, Punjab, Gurugram, infosys "
     />
     <meta name="theme-color" content="#ffffff" />
 
