--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sanjampreet Singh · Full Stack Software Developer</title>
-    <meta name="description" content="I am a Full Stack Software Developer" />
+    <meta
+      name="description"
+      content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
+    />
 
     <meta name="author" content="Sanjampreet Singh" />
     <meta
@@ -17,7 +20,6 @@
       content="gndec, gne, t&amp;p,cell,training and placement, sanjam, Accenture, infosys, sanjam, ludhiana Sanjampreet, sanjampreet singh, Full Stack, SDE, SE, ReactJS, Django, React, JavaScript, Redux, BCG X, Boston Consulting Group, India, Punjab, Gurugram, infosys "
     />
     <meta name="theme-color" content="#ffffff" />
-
     <meta itemscope="" itemtype="http://schema.org/Article" />
     <meta
       itemprop="headline"
@@ -25,9 +27,9 @@
     />
     <meta
       itemprop="description"
-      content="I am a Full Stack Software Developer"
+      content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
     />
-    <meta itemprop="image" content="https://sanjam.dev/assets/512x512.png" />
+    <meta itemprop="image" content="512x512.png" />
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Sanjampreet Singh" />
@@ -35,9 +37,9 @@
     <meta property="og:site_name" content="Sanjam" />
     <meta
       property="og:description"
-      content="I am a Full Stack Software Developer"
+      content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
     />
-    <meta property="og:image" content="https://sanjam.dev/assets/512x512.png" />
+    <meta property="og:image" content="512x512.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:locale" content="en_US" />
 
@@ -47,34 +49,17 @@
     <meta name="twitter:title" content="Sanjampreet Singh" />
     <meta
       name="twitter:description"
-      content="I am a Full Stack Software Developer"
+      content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
     />
-    <meta
-      name="twitter:image:src"
-      content="https://sanjam.dev/assets/300x300.png"
-    />
+    <meta name="twitter:image:src" content="300x300.png" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=BenchNine:700"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,400i,700,900i"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="./assets/styles.min.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <link
-      type="text/plain"
-      rel="author"
-      href="https://sanjam.dev/assets/humans.txt"
-    />
-    <link rel="manifest" href="https://sanjam.dev/site.webmanifest" />
+    <link type="text/plain" rel="author" href="humans.txt" />
+    <link rel="manifest" href="site.webmanifest" />
 
     <meta name="robots" content="INDEX,FOLLOW" />
-    <link rel="apple-touch-icon" href="./assets/192x192.png" />
+    <link rel="apple-touch-icon" href="192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <meta name="apple-mobile-web-app-title" content="Sanjam" />
@@ -87,16 +72,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link
-      rel="icon"
-      href="https://sanjam.dev/assets/512x512.png"
-      sizes="512x512"
-    />
-    <link
-      rel="icon"
-      href="https://sanjam.dev/assets/192x192.png"
-      sizes="192x192"
-    />
+    <link rel="icon" href="512x512.png" sizes="512x512" />
+    <link rel="icon" href="192x192.png" sizes="192x192" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="x5-page-mode" content="app" />
     <meta name="browsermode" content="application" />
