--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       itemprop="description"
       content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
     />
-    <meta itemprop="image" content="512x512.png" />
+    <meta itemprop="image" content="/512x512.png" />
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Sanjampreet Singh" />
@@ -39,7 +39,7 @@
       property="og:description"
       content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
     />
-    <meta property="og:image" content="512x512.png" />
+    <meta property="og:image" content="/512x512.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:locale" content="en_US" />
 
@@ -52,32 +52,32 @@
       name="twitter:description"
       content="I'm full-stack developer, a designer, and a content creator. I work at BCG X as a Software Engineer. I am passionate for creating things. I love to build and develop software that help society. In my pass-time, I socialize with my friends, and go for long walks. I meditate and also sing Gurbani Shabads."
     />
-    <meta name="twitter:image:src" content="300x300.png" />
+    <meta name="twitter:image:src" content="/300x300.png" />
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <link type="text/plain" rel="author" href="humans.txt" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <meta name="robots" content="INDEX,FOLLOW" />
-    <link rel="apple-touch-icon" href="192x192.png" />
+    <link rel="apple-touch-icon" href="/192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <meta name="apple-mobile-web-app-title" content="Sanjam" />
-    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
     <noscript>Your browser does not support JavaScript!</noscript>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -87,8 +87,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="icon" href="512x512.png" sizes="512x512" />
-    <link rel="icon" href="192x192.png" sizes="192x192" />
+    <link rel="icon" href="/512x512.png" sizes="512x512" />
+    <link rel="icon" href="/192x192.png" sizes="192x192" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="x5-page-mode" content="app" />
     <meta name="browsermode" content="application" />
